--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
       <i class="header-toggle d-xl-none bi bi-list"></i>
 
       <div class="profile-img">
-        <img src="./assets/img/edited.jpg" alt="" class="img-fluid rounded-circle" />
+        <img
+          src="./assets/img/edited.jpg"
+          alt=""
+          class="img-fluid rounded-circle"
+        />
       </div>
 
       <a
@@ -183,7 +187,8 @@
               />
               <br /><br /><br />
               <img
-                src="assets/img/android-chrome-512x512.png" style="background-color: rgba(186, 233, 15, 0.74);"
+                src="assets/img/android-chrome-512x512.png"
+                style="background-color: rgba(186, 233, 15, 0.74)"
                 class="img-fluid"
                 alt=""
               />
@@ -714,7 +719,8 @@
               >
                 <div class="portfolio-content h-100">
                   <img
-                    src="./assets/img/mydesign.jpg" style="height: 10em;"
+                    src="./assets/img/mydesign.jpg"
+                    style="height: 10em"
                     class="img-fluid"
                     alt=""
                   />
@@ -1170,7 +1176,7 @@
                   </p>
                   <img
                     style="overflow: hidden; object-fit: contain"
-                    src="../iPortfolio/assets/img/testimonials/nesre2 copy.jpg"
+                    src="./assets/img/testimonials/nesre2 copy.jpg"
                     class="testimonial-img"
                     alt=""
                   />
