--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- Favicons -->
     <link href="assets/img/android-chrome-512x512.png" rel="icon" />
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect" />
@@ -45,6 +46,12 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+  <style>
+  #cv-button:hover {
+    color: #070707 !important; /* Change text color on hover */
+    background-color: #bd1aa2 !important; /* Change background color on hover */
+  }
+</style>
   </head>
 
   <body class="index-page">
@@ -53,7 +60,7 @@
 
       <div class="profile-img">
         <img
-          src="./assets/img/edited.jpg"
+          src="./assets/img/last.jpg"
           alt=""
           class="img-fluid rounded-circle"
         />
@@ -122,6 +129,12 @@
               ><i class="bi bi-envelope navicon"></i> Contact</a
             >
           </li>
+           <!-- <a href="./index.html" class="btn btn-primary" download>Download CV</a> -->
+            <div class="container text-center mt-1" ></div>
+        <a href="./assets/img/ANWAR (1).pdf" class="btn btn-success btn-sm rounded-pill display-3 bg-dark text-white " style="width: 190px;" download id="cv-button">
+            <i class="fas fa-file-download fa-2x  me-2"></i> Download My CV
+        </a>
+    </div>
         </ul>
       </nav>
     </header>
@@ -129,7 +142,7 @@
     <main class="main">
       <!-- Hero Section -->
       <section id="hero" class="hero section dark-background">
-        <img src="./assets/img/last.jpg" alt="" data-aos="fade-in" class="" />
+        <img src="./assets/img/anwarkk.jpg" alt="" data-aos="fade-in" class="" />
 
         <div class="container" data-aos="fade-up" data-aos-delay="100">
           <h2 style="color: rgb(228, 119, 10)">Anwar Neja</h2>
@@ -205,7 +218,7 @@
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
-                      <strong>Website:</strong> <span>www.example.com</span>
+                      <strong>Website:</strong> <span>www.anwarneja.com</span>
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
@@ -674,7 +687,7 @@
                       ><i class="bi bi-zoom-in"></i
                     ></a>
                     <a
-                      href="./APPLESHOMEPAGE/practice/practiceapple.html"
+                      href="#"
                       title="More Details"
                       class="details-link"
                       ><i class="bi bi-link-45deg"></i
@@ -1175,7 +1188,7 @@
                     <i class="bi bi-quote quote-icon-right"></i>
                   </p>
                   <img
-                    style="overflow: hidden; object-fit: contain"
+                    
                     src="./assets/img/testimonials/nesre2 copy.jpg"
                     class="testimonial-img"
                     alt=""
@@ -1453,7 +1466,7 @@
           <!-- You can delete the links only if you've purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-          Designed by <a href="https://bootstrapmade.com/">Anwar Neja</a>
+          Designed by <a href="#">Anwar Neja</a>
         </div>
       </div>
     </footer>
